--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -6,8 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 apply plugin: "de.undercouch.download"
 
 
-//defaultTasks 'removeTmpFiles'
-defaultTasks 'transferSurroundingCantons'
+defaultTasks 'removeTmpFiles'
 
 task transferAfuGewaesserschutz(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -28,7 +27,6 @@ task transferSurroundingCantons(type: Db2Db, dependsOn:transferAfuGewaesserschut
     ]
 }
 
-/*
 task archiveData(type: SqlExecutor, dependsOn:transferSurroundingCantons){
     description = "Archiviert die Daten mit archiv=0 im Schema aww_gszoar"
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
@@ -43,53 +41,52 @@ task transferZonen(type: Db2Db, dependsOn:archiveData){
             new TransferSet('aww_gszoar_zonen_areale.sql', 'public.aww_gszoar', false)
     ]
 }
+ 
+def pathToTempFolder = System.getProperty("java.io.tmpdir")
+def exportFileName = 'SO_gewschutz.xtf'
+def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
+
+task exportAfuGewaesserschutz(type: Ili2pgExport, dependsOn: transferZonen) {
+    description = "Exportiert die Gewässerschutzdaten in ein xtf-File."
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    dbschema = 'afu_gewaesserschutz' 
+    models = 'PlanerischerGewaesserschutz_LV95_V1_1'
+    dataFile = exportFile
+    disableValidation = true
+  
+}
+ 
+/*
+4. Package and upload to the KKGEO AI
 */
  
-// def pathToTempFolder = System.getProperty("java.io.tmpdir")
-// def exportFileName = 'SO_gewschutz.xtf'
-// def exportFile = file(Paths.get(pathToTempFolder.toString(), exportFileName))
+def zipName = 'iliexport.zip'
 
-// task exportGefkartMgdm(type: Ili2pgExport, dependsOn: transferZonen) {
-//     description = "Exportiert die Gewässerschutzdaten in ein xtf-File."
-//     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-//     dbschema = 'afu_gewaesserschutz' 
-//     models = 'PlanerischerGewaesserschutz_LV95_V1_1'
-//     dataFile = exportFile
-//     disableValidation = true
-  
-// }
- 
-// /*
-// 4. Package and upload to the KKGEO AI
-// */
- 
-// def zipName = 'iliexport.zip'
+task zipAfuGewaesserschutz(type: Zip, dependsOn: exportAfuGewaesserschutz){
+    description = "Zipt das xtf-File mit den Gewässerschutzdaten für den Upload in die AI."
+    from pathToTempFolder
+    include exportFileName
+    archiveName zipName
+	destinationDir(file(pathToTempFolder))
+}
 
-// task zipGefkartMgdm(type: Zip, dependsOn: exportGefkartMgdm){
-//     description = "Zipt das xtf-File mit den Gewässerschutzdaten für den Upload in die AI."
-//     from pathToTempFolder
-//     include exportFileName
-//     archiveName zipName
-// 	destinationDir(file(pathToTempFolder))
-// }
+task uploadAfuGewaesserschutz (dependsOn: zipAfuGewaesserschutz) {
+    description = "Lädt die Gewässerschutzdaten in die Aggregationsinfrastruktur hoch."
 
-// task uploadGefkartMgdm (dependsOn: zipGefkartMgdm) {
-//     description = "Lädt die Gewässerschutzdaten in die Aggregationsinfrastruktur hoch."
+    def aiLogin = aiUser + ":" + aiPwd
+    def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
+    def zipFilePath = Paths.get(pathToTempFolder.toString(), zipName)
 
-//     def aiLogin = aiUser + ":" + aiPwd
-//     def serverUrl = "https://" + aiServer + "/data_agg/interlis/import"
-//     def zipFilePath = Paths.get(pathToTempFolder.toString(), zipName)
+    doLast {
+        def response = ["curl", "-u", aiLogin, "-F", "topic=planerischer_gewaesserschutz", "-F",
+                        "lv95_file=@" + zipFilePath, "-F", "publish=true", serverUrl
+                        ].execute().text
+        println(response)
+    }
+}
 
-//     doLast {
-//         def response = ["curl", "-u", aiLogin, "-F", "topic=planerischer_gewaesserschutz", "-F",
-//                         "lv95_file=@" + zipFilePath, "-F", "publish=true", serverUrl
-//                         ].execute().text
-//         println(response)
-//     }
-// }
-
-// task removeTmpFiles(type: Delete, dependsOn: uploadGefkartMgdm){
-//     description = "Entfernt während der Ausführung des Jobs erstellte Dateien."
-// 	delete file(Paths.get(pathToTempFolder.toString(), zipName)), exportFile
-// }
+task removeTmpFiles(type: Delete, dependsOn: uploadAfuGewaesserschutz){
+    description = "Entfernt während der Ausführung des Jobs erstellte Dateien."
+	delete file(Paths.get(pathToTempFolder.toString(), zipName)), exportFile
+}
  
