--- a/agi_swisstopo_gebaeudeadressen/build.gradle
+++ b/agi_swisstopo_gebaeudeadressen/build.gradle
@@ -7,8 +7,8 @@ import de.undercouch.gradle.tasks.download.Download
 apply plugin: "de.undercouch.download"
 apply plugin: "ch.so.agi.gretl"
 
-//defaultTasks 'dbImport'
-defaultTasks 'transferToPub'
+defaultTasks 'dbImport'
+//defaultTasks 'transferToPub'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
@@ -42,13 +42,13 @@ task dbImport(type: Ili2pgImport, dependsOn: 'unzipData') {
     }
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = "agi_swisstopo_gebaeudeadressen"
-    models = "OfficialIndexOfAddresses_V1"
+    models = "OfficialIndexOfAddresses_V2"
     disableValidation = true
     dataFile = file(xtfFilePath)
     deleteData = true
     strokeArcs = true
 }
-
+/*
 task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
 //task transferToPub(type: Db2Db) {
     description = "Transfer und Umbau der Daten von Edit nach Pub"
@@ -60,3 +60,4 @@ task transferToPub(type: Db2Db, dependsOn: 'dbImport') {
     fetchSize = 1000
     batchSize = 1000
 }
+*/
