--- a/awjf_waldpflege_kontrolle_pub/build.gradle
+++ b/awjf_waldpflege_kontrolle_pub/build.gradle
@@ -3,19 +3,19 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfWaldpflegeKontrollePub'
+defaultTasks 'deleteFromWaldpflegeKontrolle'
 
 
-task deleteFromWaldpflegeKontrolle(type: SqlExecutor) {
-    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-    sqlFiles = ['delete_from_awjf_waldpflege_kontrolle_pub.sql']
-}
-
-task transferAwjfWaldpflegeKontrollePub(type: Db2Db, dependsOn: 'deleteFromWaldpflegeKontrolle'){
+task transferAwjfWaldpflegeKontrollePub(type: Db2Db) {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('awjf_waldpflege_kontrolle_pub.sql',
-                    'awjf_waldpflege_kontrolle_pub.waldpflege_waldpflege', false)
+         new TransferSet('awjf_waldpflege_kontrolle_pub.sql',
+         'awjf_waldpflege_kontrolle_pub.waldpflege_waldpflege', false)
     ];
+}
+
+task deleteFromWaldpflegeKontrolle(type: SqlExecutor, dependsOn: 'transferAwjfWaldpflegeKontrollePub') {
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    sqlFiles = ['delete_from_awjf_waldpflege_kontrolle_pub.sql']
 }
