[alw_strukturverbesserungen_pub] build gradle: ftpServer Variable geändert

--- a/alw_strukturverbesserungen_suissemelio/build.gradle
+++ b/alw_strukturverbesserungen_suissemelio/build.gradle
@@ -7,7 +7,7 @@ defaultTasks 'uploadXtfFile'
 
 remotes {
     ftpServer {
-        host = "${ftpServerEmapis}"
+        host = "${ftpServerInfogrips}"
         user = "${ftpUserEmapis}"
         password = "${ftpPwdEmapis}"
         port = 22
