[alw_strukturverbesserungen_pub] add missing plugin for ssh/ftp

--- a/alw_strukturverbesserungen_suissemelio/build.gradle
+++ b/alw_strukturverbesserungen_suissemelio/build.gradle
@@ -2,6 +2,8 @@ import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
+apply plugin: 'org.hidetake.ssh'
+
 
 defaultTasks 'uploadXtfFile'
 
