[alw_strukturverbesserungen_suissemelio] add port to ftp upload

--- a/alw_strukturverbesserungen_suissemelio/build.gradle
+++ b/alw_strukturverbesserungen_suissemelio/build.gradle
@@ -12,6 +12,7 @@ remotes {
         host = "${ftpServerInfogrips}"
         user = "${ftpUserEmapis}"
         password = "${ftpPwdEmapis}"
+        port = 22
     }
 }
 
