[agi_generate_matomo_reports] update job.properties

--- a/agi_generate_matomo_reports/job.properties
+++ b/agi_generate_matomo_reports/job.properties
@@ -1,2 +1,1 @@
-parameters.stringParam:buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
-logRotator.numToKeep=unlimited
+logRotator.numToKeep=5
