Add yaml part of the parent pod template
As it seems to be necessary

--- a/processing_db/Jenkinsfile
+++ b/processing_db/Jenkinsfile
@@ -15,6 +15,12 @@ pipeline {
         yaml '''
           spec:
             containers:
+            - name: jnlp
+              envFrom:
+              - configMapRef:
+                  name: gretl-resources
+              - secretRef:
+                  name: gretl-secrets
             - name: processing-db
               image: crunchydata/crunchy-postgres-gis:centos8-13.3-3.1-4.6.3
               env:
